--- a/index.html
+++ b/index.html
@@ -1,63 +1,58 @@
 <!doctype html>
 <html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
-
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
-
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
-
   <link rel="stylesheet" href="css/style.css">
   <meta name="theme-color" content="#fafafa">
 </head>
 <body>
  <table>
    <tr>
-     <td colspan="2"> 1 </td>
-     <td colspan="1">2 </td>
-     <td class="yellow" colspan="2">3 </td>
-     <td rowspan="4"> 4</td>
+     <td colspan="2"></td>
+     <td colspan="1"></td>
+     <td class="yellow" colspan="2"></td>
+     <td rowspan="4"></td>
    </tr>
    <tr>
-     <td>5 </td>
-     <td class="red" rowspan="2" colspan="2">6 </td>
-     <td class="yellow" colspan="2">7</td>
+     <td></td>
+     <td class="red" rowspan="2" colspan="2"></td>
+     <td class="yellow" colspan="2"></td>
    </tr>
    <tr>
-     <td rowspan="2">8</td>
-     <td>9</td>
-     <td>10</td>
+     <td rowspan="2"></td>
+     <td></td>
+     <td></td>
    </tr>
    <tr>
-     <td class="black" rowspan="2">11</td>
-     <td>12</td>
-     <td colspan="2">13</td>
+     <td class="black" rowspan="2"></td>
+     <td></td>
+     <td colspan="2"></td>
    </tr>
    <tr>
-     <td class="yellow" rowspan="3">14</td>
-     <td>15</td>
-     <td class="blue" rowspan="2" colspan="2">16</td>
-     <td class="red" rowspan="3">17</td>
+     <td class="yellow" rowspan="3"></td>
+     <td></td>
+     <td class="blue" rowspan="2" colspan="2"></td>
+     <td class="red" rowspan="3"></td>
    </tr>
    <tr>
-     <td rowspan="2">18</td>
-     <td class="black">19</td>
+     <td rowspan="2"></td>
+     <td class="black"></td>
    </tr>
    <tr>
-     <td colspan="3">20</td>
+     <td colspan="3"></td>
    </tr>
  </table>
 </body>
-
 </html>
